--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.9"
+    "mongoose": "^6.0.9",
+    "razorpay": "^2.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
